fixes broken UI when too many chats

--- a/app/assets/stylesheets/lounge_car/application.css
+++ b/app/assets/stylesheets/lounge_car/application.css
@@ -123,6 +123,9 @@ img, svg {
 #sidebar ul {
     list-style: none;
     padding-left: 20px;
+    margin: 0;
+    max-height: calc(100vh - 100px);
+    overflow-y: auto;
 }
 
 #sidebar ul li {
